--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -5,7 +5,7 @@
 %% Second parameter: use 'submission' for initial submission, remove it for camera-ready (see 5.1)
 
 \usepackage[backend=biber]{biblatex}
-\addbibresource{example.bib}
+\addbibresource{reference.bib}
 \usepackage{tikz}
 \usepackage{listings}
 
