--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -72,15 +72,16 @@
 
 \begin{document}
 
-\title{Live probes for free}
+\title{Language-Parametric Techniques for Live Probes}
 %\subtitle{Preparing Articles for Programming}% optional
 %\titlerunning{Preparing Articles for Programming} %optional, in case that the title is too long; the running title should fit into the top page column
 
 \author[a]{Jean-Baptiste Döderlein}
 \affiliation[a]{ENS Rennes, Bruz, France}
-\author[b]{Tijs van der Storm}
-\affiliation[b]{CWI, Amsterdam, The Netherlands}
 \author[b]{Riemer van Rozen}
+\affiliation[b]{CWI, Amsterdam, The Netherlands}
+\author[b,c]{Tijs van der Storm}
+\affiliation[c]{University of Groningen, Groningen, The Netherlands}
 
 
 \keywords{programming journal, paper formatting, submission preparation} % please provide 1--5 keywords
@@ -120,24 +121,24 @@
 % being returned to the authors.
 \begin{abstract}
   %What is the broad context of the work? What is the importance of the general research area?
-  \emph{Context}
-  In his presentation "Inventing on Principles", Bret Victor demonstrates a live code editor: by specifying input values for a function, we can observe in real time the values taken by the variables during execution, as the code is written. 
-  This information is often obtained using a language designed for live programming or by instrumentation of a specific runtime.
+  \paragraph{Context}
+  In the first part of his 2012 presentation ``Inventing on Principle''~\cite{InventingOnPrinciple}, Bret Victor gives a demo of live code editor for Javascript which shows the dynamic history of values of variables in real time. This form of live programming has become known as ``live probes''~\cite{GiladBlogMethodsLive,SeanMcDirmid,ExampleBasedProg}. Using live probes the programmer has a permanent and continuous insight into the dynamic evolution of function or method variables, thus improving feedback and developer experience. 
   % What problem or question does the paper address? How has this problem or question been addressed by others (if at all)?
-  \emph{Inquiry}
-  \dots
+  \paragraph{Inquiry} Although Bret Victor shows a working prototype of live probes in the context of Javascript, he does not discuss strategies for implementing them. Later work~\cite{ExampleBasedProg} provides an implementation approach, but this requires a programming language to be implemented on top of the GraalVM runtime~\cite{GraalVM}. In this paper we investigate generic engineering strategies that can be applied in the context of many programming languages, without requiring dedicated compiler or runtime support. 
+  
   % What was done that unveiled new knowledge?
-  \emph{Approach}
-  In this paper we propose to exploit the capabilities of debuggers to obtain the data needed to design a live code editor.
+  \paragraph{Approach}
+  In this paper we explore how debugger protocols can be exploited to implement live probes. Methods or functions are compiled after every code change and executed inside the debugger. During execution the evolution of all local variables in the current stack frame are recorded and communicated back to the IDE for display to the user. 
   % What new facts were uncovered? If the research was not results oriented, what new capabilities are enabled by the work?
-  \emph{Knowledge}
-  \dots
+  \paragraph{Knowledge}
+  It turns out that debugger protocols are rich enough for implementing live probes. Step-wise execution, hot code swapping and stack frame inspection provide the right granularity and sufficient information to realize live probes, without modifying compilers or language runtimes. Furthermore, it turns out that the recently proposed Debugger Adapter Protocol (DAP)~\cite{DAP} provides an even more generic approach of implementing live probes, but, in some cases, at the cost of a significant performance penalty. 
+
   % What argument, feasibility proof, artifacts, or results and evaluation support this work?
-  \emph{Grounding}
-  \dots
+  \paragraph{Grounding}
+  We have implemented live probes using stack recording natively for Java through the Java Debugger Interface (JDI), and through the DAP for Java, Python, and C, all with minimum glue code.  We evaluate the run-time performance of all four live probes prototypes, decomposed into: compile-after-change, hotswap, single step overhead, and stack recording overhead. Our results show that live probes on top of native debugger APIs are performant enough for interactive use. In the case of DAP, it depends on characteristics of the programming language. 
+
   % Why does this work matter?
-  \emph{Importance}
-  \dots
+  \paragraph{Importance} Live programming improves the programmer experience by providing immediate feedback about a program's execution and eliminating disruptive edit-compile-restart sequences. Live probes are one way to shorten the programmer feedback loop at the level of functions and methods. Although live probes are not new, and have been implemented in (prototype) systems, our approach of building live probes on top of existing and generic debugger protocols opens up live probes for a host of mainstream programming language, with minimum effort.
  
 \end{abstract}
 \section{Introduction}
