--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -79,7 +79,7 @@
 \author[a]{Jean-Baptiste Döderlein}
 \affiliation[a]{ENS Rennes, Bruz, France}
 \author[b]{Riemer van Rozen}
-\affiliation[b]{CWI, Amsterdam, The Netherlands}
+\affiliation[b]{Centrum Wiskunde \&\ Informatica (CWI), Amsterdam, The Netherlands}
 \author[b,c]{Tijs van der Storm}
 \affiliation[c]{University of Groningen, Groningen, The Netherlands}
 
@@ -146,6 +146,13 @@
 
 \section{Problem Overview}
 \label{sec:problem-overview}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{img/bret}
+  \caption{Screenshot of Bret Victor's 2012 talk ``Inventing on Principle'' (23rd minute)}
+  \label{FIG:bret}
+\end{figure}
 
 \section{Using the Debugger ?}
 \label{sec:stack-recording}
