--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -139,10 +139,35 @@
 
   % Why does this work matter?
   \paragraph{Importance} Live programming improves the programmer experience by providing immediate feedback about a program's execution and eliminating disruptive edit-compile-restart sequences. Live probes are one way to shorten the programmer feedback loop at the level of functions and methods. Although live probes are not new, and have been implemented in (prototype) systems, our approach of building live probes on top of existing and generic debugger protocols opens up live probes for a host of mainstream programming language, with minimum effort.
- 
 \end{abstract}
+
 \section{Introduction}
 \label{sec:introduction}
+
+Live programming~\cite{Tanimoto,UsableLive,JonathanEdwards,VanRozenEtal} promises a better programming experience by bringing the execution of a program closer to the abstractions of the source code. By erasing the distinction between a program on the one hand, and its execution on the other, programmers may enjoy a more fluid experience, with immediate dynamic feedback after every code change. 
+
+Live programming has a rich history, both in academia and industrial research~\cite{???}, originating in the original Lisp systems and Smalltak which allowed dynamic replacement of code units (hot swapping) and inspection of program structures at run-time (sometimes referred to as ``programming in the debugger''). However, live programming became center stage after Bret Victor's influential talk ``Inventing on Principle'', which went viral in 2012. 
+
+In that presentation Victor makes a compelling case that (paraphrasing) ``creators need to see what they are creating''. In the case of programming, this entails continuous inspection of the run-time behavior of a program, and immediate and seamless adaptation after a code change. While all the prototypes demonstrated by Victor are impressive, for the purpose of this paper we zoom in on one of them: a live editor for Javascript with a side pane showing the history of values of local function variables during an execution (see Figure~\ref{FIG:bret} below). Although not mentioned by Victor himself, this live programming features has become known as ``live probes''~\cite{SeanMcDirmid,ExampleBasedGraal}.
+
+The question left unanswered in Victor's presentation is: how to build such live probes? While there has been recent research showcasing an implementation approach~\cite{ExampleBasedGraal}, it depends on specific a runtime system (GraalVM), and cannot be easily transferred to other languages. So a more specific question is: how to  engineer live probes without dedicated compiler or runtime support?
+
+In this paper we present an approach to implementing live probes reusing standard debugger protocols and APIs. Most language support an API to facilitate the implementation of debuggers and other run-time tools (e.g., profilers, tracers, etc.). It turns out that such facilities are sufficiently powerful for implementing live probes. The key to the approach is to (re)execute a function or method inside the debugger, step by step, and at each step record a snapshot of the current stack-frame. After the method has finished executing, the resulting stack recording is communicated back to the IDE and visualized alongside the code, matching stack recording entries to the source code using source location information.
+
+We first detail how to implement live probes using a native debugger interface, the Java Debugger Interface (JDI). Then we generalize the approach to employ the recently proposed Debugger Adapter Protocol (DAP). 
+This implementation is showcased with live probe implementations in Java (again), C, Python, and Javascript. 
+As a result, live probes can be supported in any programming language that provides an implementation of the DAP, with only a limited amount of configuration code.  
+
+Since live programming (and hence live probes) is all about immediate feedback, it is important that the performance overhead of our implementation strategy does not impede practical use. We therefore provide a detail analysis and measurement of the performance overhead of (re)compilation, hot-swapping, step-wise execution, and stack recording. To assess the overall usability of the approach, we furthermore decompose a full editing scenario (derived from Victor's presentation) in $X$ logical steps, replay it on every live probe implementation, and measure the performance of each step.
+
+The contributions of this paper can be summarized as follows:
+\begin{itemize}
+  \item We analyze the requirements for implementing live probes (Section~\ref{sec:problem-overview})
+  \item We introduce \textit{stack recording} as a technique to obtain the required information through standard debugger protocols (Section~\ref{sec:stack-recording})
+  \item We implement live probes through stack recording on top of the Java Debugger Interface (JDI) (Section~\ref{sec:live-probes-java})
+  \item We then generalize the approach via the Debugger Adapter Protocol (DAP) (Section~\ref{sec:generalizing-live-probes})
+   \item We evaluate the feasibility of the approach by implementing live probes for Java, Python, C and Javascript on top the DAP, investigate the performance overhead of the individual steps, and reproduce an editing scenario to assess practicality (Section~\ref{sec:evaluation})
+\end{itemize}
 
 \section{Problem Overview}
 \label{sec:problem-overview}
