--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -406,6 +406,7 @@ Notably, the execution time exhibits a linear relationship with the number of st
 
 \subsubsection{What is the average performance during a live programming session?}
 
+\begin{comment}
 \begin{table}[h]
   \centering
   \begin{tabular}{@{} r c c c c c c c c c @{}}
@@ -422,6 +423,20 @@ Notably, the execution time exhibits a linear relationship with the number of st
   \label{table:average-time}
 \end{table}
 
+To evaluate the performance of our approach in the general context of a live programming session, we measured the times taken by the different stages of the interaction loop:
+
+\begin{itemize}
+  \item Agent initialisation time, which occurs once at the start of the session.
+  \item The compilation time, if there is a compilation stage.
+  \item The time taken to load the code into the debugger.
+  \item Program execution time.
+\end{itemize}
+
+For the 3 languages we have implemented, we have performed the measurements for the execution of a binary search function \ref{fig:binary-search}.
+For each language, the agent was initialized, then the code was compiled, loaded into the debugger and executed (with the array [1,2,3,4,5,6] and target 9) 100 times.
+Each execution generate a stack recording of approximately 20 stack frames.
+The results are shown in table \ref{table:average-time}.
+\end{comment}
 \begin{figure}[htbp]
   \centering
   \begin{subfigure}[b]{0.3\textwidth}
@@ -449,20 +464,16 @@ Notably, the execution time exhibits a linear relationship with the number of st
   \label{fig:scenario-bs}
 \end{figure}
 
-To evaluate the performance of our approach in the general context of a live programming session, we measured the times taken by the different stages of the interaction loop:
 
-\begin{itemize}
-  \item Agent initialisation time, which occurs once at the start of the session.
-  \item The compilation time, if there is a compilation stage.
-  \item The time taken to load the code into the debugger.
-  \item Program execution time.
-\end{itemize}
+To test the performance of our approach under real conditions, we recreated the live programming scenario presented in the video by bret victor. 
+The scenario describes the programming of a function performing a binary search on an array of characters. It consists of 18 steps, including 10 steps where the source code is modified and 8 steps where the parameters are changed. 
+The scenario also includes the case where the tested method does not finish. As the code in Bret Victor's presentation is in Javascript, it has been adapted to the 3 languages studied in this paper.
 
-For the 3 languages we have implemented, we have performed the measurements for the execution of a binary search function \ref{fig:binary-search}.
-For each language, the agent was initialized, then the code was compiled, loaded into the debugger and executed (with the array [1,2,3,4,5,6] and target 9) 100 times.
-Each execution generate a stack recording of approximately 20 stack frames.
-The results are shown in table \ref{table:average-time}.
+For this test we set the maximum size of the stack recording at 80 stackframes. When the recording exceeds this limit, the debugger is stopped and restarted.
 
+The figure \ref{fig:scenario-bs} shows the time and number of stackframes recorded for each stage of the scenario in Python, C and Java. 
+When the initialisation is executed for Java and C, the time taken at each stage follows the same trend as the number of stack frames registered. 
+At step 16, we also observe the case of an infinite loop in the scenario.
 
 
 
@@ -484,75 +495,6 @@ In this paper they record almost everything, we only record the stackframe.
 \label{sec:conclusion}
 
 \printbibliography
-
-\newpage
-\section*{Appendix}
-\label{sec:appendix}
-
-\begin{figure}[h]
-  \centering
-    \begin{lstlisting}[language=C]
-int binary_search(int arr[], int length, int target) {
-  int left = 0;
-  int right = length - 1;
-  while (left <= right) {
-
-      int mid = (left + right) / 2;
-      if (arr[mid] == target) {
-          return mid;
-      } else if (arr[mid] < target) {
-          left = mid + 1;
-      } else {
-          right = mid - 1;
-      }
-  }
-  return 0;
-}
-    \end{lstlisting}
-  
-    \begin{lstlisting}[language=Python]
-def binary_search(arr, target):
-    left = 0
-    right = len(arr) - 1
-
-    while left <= right:
-        mid = (left + right) // 2
-
-        if arr[mid] == target:
-            return mid
-        elif arr[mid] < target:
-            left = mid + 1
-        else:
-            right = mid - 1
-
-    return 0 
-    \end{lstlisting}
- 
-    \begin{lstlisting}[language=Java]
-public class BinarySearch {
-    public static int binarySearch(int[] array, int key){
-        int low = 0;
-        int high = array.length - 1;
-        while (low <= high) {
-            int mid = (low + high) / 2;
-            int value = array[mid];
-            if (value < key) {
-                low = mid + 1;
-            } else if (value > key) {
-                high = mid - 1;
-            } else {
-                return mid;
-            }
-        }
-        return 0;
-    }
-}
-      \end{lstlisting}
-  \caption{Binary Search in C, Python and Java}
-  \label{fig:binary-search}
-\end{figure}
-
-
 
 \end{document}
 
