--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -45,11 +45,11 @@
 \paperdetails{
   %% perspective options are: art, sciencetheoretical, scienceempirical, engineering.
   %% Choose exactly the one that best describes this work. (see 2.1)
-  perspective=art,
+  perspective=engineering,
   %% State one or more areas, separated by a comma. (see 2.2)
   %% Please see list of areas in http://programming-journal.org/cfp/
   %% The list is open-ended, so use other areas if yours is/are not listed.
-  area={Social Coding, General-purpose programming},
+  area={Live programming, language engineering},
   %% You may choose the license for your paper (see 3.)
   %% License options include: cc-by (default), cc-by-nc
   % license=cc-by,
@@ -135,7 +135,7 @@
 
   % What argument, feasibility proof, artifacts, or results and evaluation support this work?
   \paragraph{Grounding}
-  We have implemented live probes using stack recording natively for Java through the Java Debugger Interface (JDI), and through the DAP for Java, Python, and C, all with minimum glue code.  We evaluate the run-time performance of all four live probes prototypes, decomposed into: compile-after-change, hotswap, single step overhead, and stack recording overhead. Our results show that live probes on top of native debugger APIs are performant enough for interactive use. In the case of DAP, it depends on characteristics of the programming language. 
+  We have implemented live probes using stack recording natively for Java through the Java Debugger Interface (JDI), and through the DAP for Java, Python, C, and Javascript, all with minimum glue code.  We evaluate the run-time performance of all four live probes prototypes, decomposed into: compile-after-change, hotswap, single step overhead, and stack recording overhead. Our results show that live probes on top of native debugger APIs are performant enough for interactive use. In the case of DAP, it depends on characteristics of the programming language. 
 
   % Why does this work matter?
   \paragraph{Importance} Live programming improves the programmer experience by providing immediate feedback about a program's execution and eliminating disruptive edit-compile-restart sequences. Live probes are one way to shorten the programmer feedback loop at the level of functions and methods. Although live probes are not new, and have been implemented in (prototype) systems, our approach of building live probes on top of existing and generic debugger protocols opens up live probes for a host of mainstream programming language, with minimum effort.
@@ -169,15 +169,37 @@ The contributions of this paper can be summarized as follows:
    \item We evaluate the feasibility of the approach by implementing live probes for Java, Python, C and Javascript on top the DAP, investigate the performance overhead of the individual steps, and reproduce an editing scenario to assess practicality (Section~\ref{sec:evaluation})
 \end{itemize}
 
-\section{Problem Overview}
+\section{Background and Overview}
 \label{sec:problem-overview}
 
-\begin{figure}
+
+The basic concept of live probes is illustrated in Figure~\ref{FIG:bret}, showing two panes. 
+The left pane shows an editor containing the source code of a possible implementation of binary search in Javascript. 
+The right pane shows the values of variables matched up to the source line they were last updated.
+The top two rows specify example input data that the function is executed on. The consecutive values of variables that are updated in a loop (e.g. \lstinline{low}, \lstinline{high}, \lstinline{mid} and \lstinline{value}) are displayed adjacently. So for \lstinline{low}, the history of values is 0, 3, and 5. Note that the update of \lstinline{high} in the else-if branch (apparently) never executed, so there is no (redundant) value display in the right pane. Finally, the last line shows the final return value of the function: apparently the \lstinline{key} was not found in the \lstinline[language=c]{array}. 
+
+What makes this \textit{live} is that while the programmer is editing the program on the left (or the input arguments to the function), the value display on the right continuously updates so that it is apparent what is going on at run time. 
+
+
+Dissecting this example leads to the following technical requirements for implementing live probes:
+\begin{itemize}
+  \item there should a way to specify the inputs to a method
+  \item after every change to the code, it needs to be recompiled and reexecuted
+  \item during execution the values of variables needs to be recorded and linked to source lines
+  \item the resulting history list of values needs to be communicated to the IDE
+\end{itemize}
+
+
+The basic intuition of our approach to meet these requirements is as follows: a separate process, called the \textit{Keep Alive Agent} (KAA) starts the debugger in the background and monitors the editor for changes to the source code. Whenever the programmer edits the code, the KAA attempts to recompile the code, and, if successful, hotswaps the current method into the debugger. It then queries the source code for annotations (either explicit annotations as in Java, or special comments) specifying the input arguments to the method. The KAA then sets a breakpoint on the first statement of the method, and invokes it. Since there is a breakpoint, the debugger halts. Using the common step-over facility of a typical debugger, the KAA then steps through the whole method until its execution completes. During this process however, the KAA takes snapshots of the current stack frame to record the values of local variables. These snapshots are stored in a data structure, called \textit{stack recording}, which supports displaying the values in the IDE, for instance, like in Figure~\ref{FIG:bret}, inline~\cite{LiveLit,ExampleBasedGraal}, or using some other UI affordance. 
+
+
+\begin{figure}[t]
   \centering
   \includegraphics[width=\textwidth]{img/bret}
   \caption{Screenshot of Bret Victor's 2012 talk ``Inventing on Principle'' (23rd minute)}
   \label{FIG:bret}
 \end{figure}
+
 
 \section{Using the Debugger ?}
 \label{sec:stack-recording}
@@ -523,6 +545,8 @@ Use source location to relate execution and code(=> almost like stack recording 
 
 Scalable Omniscient Debugging\cite{10.1145/1297105.1297067} : Omniscient debugging with a lot of data. Use a lot of memory to store all the data.
 In this paper they record almost everything, we only record the stackframe.
+
+LiveLiterals (Van der Storm, Live 2016)
 
 \section{Conclusion}
 \label{sec:conclusion}
