--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -150,7 +150,7 @@ Live programming has a rich history, both in academia and industrial research~\c
 
 In that presentation Victor makes a compelling case that (paraphrasing) ``creators need to see what they are creating''. In the case of programming, this entails continuous inspection of the run-time behavior of a program, and immediate and seamless adaptation after a code change. While all the prototypes demonstrated by Victor are impressive, for the purpose of this paper we zoom in on one of them: a live editor for Javascript with a side pane showing the history of values of local function variables during an execution (see Figure~\ref{FIG:bret} below). Although not mentioned by Victor himself, this live programming features has become known as ``live probes''~\cite{SeanMcDirmid,ExampleBasedGraal}.
 
-The question left unanswered in Victor's presentation is: how to build such live probes? While there has been recent research showcasing an implementation approach~\cite{ExampleBasedGraal}, it depends on specific a runtime system (GraalVM), and cannot be easily transferred to other languages. So a more specific question is: how to  engineer live probes without dedicated compiler or runtime support?
+The question left unanswered in Victor's presentation is: how to build such live probes? While there has been recent research showcasing implementation approaches~\cite{ExampleBasedGraal}, they depends on a specific runtime system (e.g., GraalVM), or language specific ``hacks''~\cite{LiveLit}, and hence cannot be easily transferred to other languages. So a more specific question is: how to  engineer live probes \textit{generically}, without dedicated compiler or runtime support?
 
 In this paper we present an approach to implementing live probes reusing standard debugger protocols and APIs. Most language support an API to facilitate the implementation of debuggers and other run-time tools (e.g., profilers, tracers, etc.). It turns out that such facilities are sufficiently powerful for implementing live probes. The key to the approach is to (re)execute a function or method inside the debugger, step by step, and at each step record a snapshot of the current stack-frame. After the method has finished executing, the resulting stack recording is communicated back to the IDE and visualized alongside the code, matching stack recording entries to the source code using source location information.
 
