--- a/paper/reference.bib
+++ b/paper/reference.bib
@@ -68,6 +68,13 @@ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
 address = {USA}
 }
 
+@unpublished{LiveProgHist13,
+  author = {Unkown},
+  note   = {Online: \url{https://liveprogramming.github.io/liveblog/2013/01/a-history-of-live-programming/}},
+  title  = {A History of Live Programming},
+  year   = {2013}
+}
+
 
 @article{Sandewall78,
 author = {Sandewall, Erik},
